2006-11-30        svu

	* SqlPlugin.props, sql/preprocessors/VariableSubstitutor.java: fixing
	variable substitution

2006-11-29        svu

	* SqlPlugin.props, sql/ResultSetWindowPopup.java,
	sql/serverTypes/oracle.xml, sql/ResultSetWindow.java: "Copy all to
	DML" popup menu works (at least for Oracle)

2006-11-27        svu

	* SqlPlugin.props, sql/ResultSetWindowPopup.java,
	sql/SqlServerRecord.java: polishing popup menu, just a bit. Preparing
	for new "Copy" menu items.

2006-11-24        svu

	* sql/serverTypes/oracle.xml, sql/SqlServerRecord.java: Allow custom
	params in the server type definition. Use custom parameter for
	introducing Oracle compatibility fix (see
	http://www.oracle.com/technology/tech/java/sqlj_jdbc/htdocs/jdbc_faq.htm#08_01).
	Making dealing with params more robust (if the parameter is not
	specified in the server record, use default from the server type).<F2>

2006-11-23        svu

	* *.java: indenting using latest astyle.

2006-11-13        svu

	* SqlPlugin.props, sql/CodeObjectType.java,
	sql/serverTypes/OracleVFS.java, sql/serverTypes/oracle.xml,
	sql/serverTypes/oracle/TriggerObjectType.java,
	sql/TableObjectType.java, sql/SqlSubVFS.java: Separating ObjectAction
	from ObjectType. Hopefully ready to add more ObjectActions.

2006-11-12        svu

	* SqlPlugin.props, example.xml.html, users-guide.xml,
	sql/SqlSubVFS.java, sql/TableObjectType.java, sql/serverTypes/ASA.xml,
	sql/serverTypes/ComplexVFS.java, sql/serverTypes/Derby.xml,
	sql/serverTypes/MSSQL.jTDS.xml, sql/serverTypes/MSSQL.xml,
	sql/serverTypes/OracleVFS.java, sql/serverTypes/PostgresVFS.java,
	sql/serverTypes/Progress.xml, sql/serverTypes/ProgressVFS.java,
	sql/serverTypes/Sybase.xml, sql/serverTypes/SybaseVFS.java,
	sql/serverTypes/db2Local.xml, sql/serverTypes/db2Remote.xml,
	sql/serverTypes/example.xml, sql/serverTypes/mysql.xml,
	sql/serverTypes/oracle.xml, sql/serverTypes/pgsql.xml,
	sql/serverTypes/complex/CodeObjectType.java,